--- a/applications/wording-ai-app/src/main/resources/static/index.html
+++ b/applications/wording-ai-app/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <h1>Swagger UI</h1>
 
 <ul>
-    <li><a href="/swagger-ui.html">Swagger-UI</a></li>
+    <li><a href="/swagger-ui.html">Swagger UI</a></li>
 </ul>
