--- a/applications/web-ai-app/src/main/resources/static/mail.html
+++ b/applications/web-ai-app/src/main/resources/static/mail.html
@@ -12,36 +12,79 @@
     html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
     .w3-bar-block .w3-bar-item {padding: 16px}
 </style>
+    <script>
+        $(document).ready(function(){
+               var serviceUrl = "http://localhost:8080/letters/query/you/20";
+
+               $.ajax({url: serviceUrl,
+                       type: "GET",
+                        success: function(letterResults)
+                                {
+
+                                $("#ReceivedLettersPanel").html("");
+
+
+                                   //for loop
+                                    var letterResultsHtml = "";
+
+                                    for (let x in letterResults) {
+                                        var letterResult = letterResults[x];
+
+                                        var lrHtml = "<a href='javascript:void(0)' class='w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey' onclick='openMail('Borge');w3_close();' id='firstTab'>"+
+                                                     "<div class='w3-container'>"+
+                                                            "<img class='w3-round w3-margin-right' src='/images/"+letterResult.letter.author+".png' style='width:15%;'><span class='w3-opacity w3-large'>Borge Refsnes</span>"+
+                                                            "<h6>Subject: "+letterResult.letter.subject+"</h6>"+
+                                                            "<p>"+letterResult.letter.body+"</p>"+
+                                                        "</div>"+
+                                                    "</a>";
+
+
+
+                                        letterResultsHtml +=lrHtml;
+
+                                     }
+
+                                        $("#ReceivedLettersPanel").html(letterResultsHtml);
+                               },
+                        error: function(xhr)
+                                {
+                                    alert("ERROR:"+xhr);
+                                }
+                        });
+           });
+    </script>
 </head>
 <body>
 
 <!-- Side Navigation -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-white w3-animate-left w3-card" style="z-index:3;width:320px;" id="mySidebar">
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="https://www.w3schools.com/images/w3schools.png" style="width:60%;"></a>
+<!--    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="https://www.w3schools.com/images/w3schools.png" style="width:60%;"></a>-->
     <a href="javascript:void(0)" onclick="w3_close()" title="Close Sidemenu"
        class="w3-bar-item w3-button w3-hide-large w3-large">Close <i class="fa fa-remove"></i></a>
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-dark-grey w3-button w3-hover-black w3-left-align" onclick="document.getElementById('id01').style.display='block'">New Message <i class="w3-padding fa fa-pencil"></i></a>
     <a id="myBtn" onclick="myFunc('Demo1')" href="javascript:void(0)" class="w3-bar-item w3-button"><i class="fa fa-inbox w3-margin-right"></i>Inbox (3)<i class="fa fa-caret-down w3-margin-left"></i></a>
     <div id="Demo1" class="w3-hide w3-animate-left">
-        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Borge');w3_close();" id="firstTab">
-            <div class="w3-container">
-                <img class="w3-round w3-margin-right" src="/w3images/avatar3.png" style="width:15%;"><span class="w3-opacity w3-large">Borge Refsnes</span>
-                <h6>Subject: Remember Me</h6>
-                <p>Hello, i just wanted to let you know that i'll be home at...</p>
-            </div>
-        </a>
-        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Jane');w3_close();">
-            <div class="w3-container">
-                <img class="w3-round w3-margin-right" src="/w3images/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-            </div>
-        </a>
-        <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('John');w3_close();">
-            <div class="w3-container">
-                <img class="w3-round w3-margin-right" src="/w3images/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span>
-                <p>Welcome!</p>
-            </div>
-        </a>
+        <div id="ReceivedLettersPanel">
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Borge');w3_close();" id="firstTab">
+                <div class="w3-container">
+                    <img class="w3-round w3-margin-right" src="/w3images/avatar3.png" style="width:15%;"><span class="w3-opacity w3-large">Borge Refsnes</span>
+                    <h6>Subject: Remember Me</h6>
+                    <p>Hello, i just wanted to let you know that i'll be home at...</p>
+                </div>
+            </a>
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('Jane');w3_close();">
+                <div class="w3-container">
+                    <img class="w3-round w3-margin-right" src="/w3images/avatar5.png" style="width:15%;"><span class="w3-opacity w3-large">Jane Doe</span>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                </div>
+            </a>
+            <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey" onclick="openMail('John');w3_close();">
+                <div class="w3-container">
+                    <img class="w3-round w3-margin-right" src="/w3images/avatar2.png" style="width:15%;"><span class="w3-opacity w3-large">John Doe</span>
+                    <p>Welcome!</p>
+                </div>
+            </a>
+        </div>
     </div>
     <a href="#" class="w3-bar-item w3-button"><i class="fa fa-paper-plane w3-margin-right"></i>Sent</a>
     <a href="#" class="w3-bar-item w3-button"><i class="fa fa-hourglass-end w3-margin-right"></i>Drafts</a>
