adding html changes

--- a/applications/web-ai-app/src/main/resources/static/mail.html
+++ b/applications/web-ai-app/src/main/resources/static/mail.html
@@ -29,12 +29,21 @@
 
                                     for (let x in letterResults) {
                                         var letterResult = letterResults[x];
+                                        var sentimentHtml = "";
+
+                                        if( "POSITIVE" == letterResult.sentiment )
+                                           sentimentHtml = "<button class='w3-button w3-block w3-green w3-section' title='Accept'>positive <i class='fa fa-check'></i></button>";
+                                        else
+                                            sentimentHtml = "<button class='w3-button w3-block w3-red w3-section' title='Decline'>negative <i class='fa fa-remove'></i></button>";
 
                                         var lrHtml = "<a href='javascript:void(0)' class='w3-bar-item w3-button w3-border-bottom test w3-hover-light-grey' onclick='openMail('Borge');w3_close();' id='firstTab'>"+
                                                      "<div class='w3-container'>"+
                                                             "<img class='w3-round w3-margin-right' src='/images/"+letterResult.letter.author+".png' style='width:15%;'><span class='w3-opacity w3-large'>Borge Refsnes</span>"+
                                                             "<h6>Subject: "+letterResult.letter.subject+"</h6>"+
                                                             "<p>"+letterResult.letter.body+"</p>"+
+                                                        "</div>"+
+                                                        "<div class='w3-half'>"+
+                                                         sentimentHtml+
                                                         "</div>"+
                                                     "</a>";
 
