--- a/applications/web-ai-app/src/main/resources/static/main.html
+++ b/applications/web-ai-app/src/main/resources/static/main.html
@@ -35,7 +35,7 @@
                                         var letterResult = letterResults[x];
 
                                         var lrHtml = "<div class='w3-container w3-card w3-white w3-round w3-margin'><br>"+
-                                                       "<img src='/w3images/avatar2.png' alt='Avatar' class='w3-left w3-circle w3-margin-right' style='width:60px'>"+
+                                                       "<img src='/w3images/"+letterResult.letter.author+".png' alt='Avatar' class='w3-left w3-circle w3-margin-right' style='width:60px'>"+
                                                         "<span class='w3-right w3-opacity'>"+letterResult.distance+" distance</span>"+
                                                         "<h4>"+letterResult.letter.author+"</h4><br>"+
                                                         "<hr class='w3-clear'/>"+
