--- a/applications/web-ai-app/src/main/resources/static/main.html
+++ b/applications/web-ai-app/src/main/resources/static/main.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="styles/site.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-blue-grey.css">
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
@@ -35,7 +36,7 @@
                                         var letterResult = letterResults[x];
 
                                         var lrHtml = "<div class='w3-container w3-card w3-white w3-round w3-margin'><br>"+
-                                                       "<img src='/w3images/"+letterResult.letter.author+".png' alt='Avatar' class='w3-left w3-circle w3-margin-right' style='width:60px'>"+
+                                                       "<img src='/images/"+letterResult.letter.author+".png' alt='Avatar' class='w3-left w3-circle w3-margin-right' style='width:60px'>"+
                                                         "<span class='w3-right w3-opacity'>"+letterResult.distance+" distance</span>"+
                                                         "<h4>"+letterResult.letter.author+"</h4><br>"+
                                                         "<hr class='w3-clear'/>"+
@@ -64,9 +65,9 @@
 
 <!-- Navbar -->
 <div class="w3-top">
-    <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
+    <div class="w3-bar site-theme-d2 w3-left-align w3-large">
         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>Home</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large site-theme-d4"><i class="fa fa-home w3-margin-right"></i>Home</a>
         <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="News"><i class="fa fa-globe"></i></a>
         <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings"><i class="fa fa-user"></i></a>
         <a href="mail.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages"><i class="fa fa-envelope"></i></a>
@@ -101,12 +102,8 @@
             <!-- Profile -->
             <div class="w3-card w3-round w3-white">
                 <div class="w3-container">
-                    <h4 class="w3-center">My Profile</h4>
-                    <p class="w3-center"><img src="/w3images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
-                    <hr>
-                    <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
-                    <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
-                    <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
+                    <h4 class="w3-center">Queen</h4>
+                    <p class="w3-center"><img src="/images/female.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar"></p>
                 </div>
             </div>
             <br>
@@ -114,15 +111,15 @@
             <!-- Accordion -->
             <div class="w3-card w3-round">
                 <div class="w3-white">
-                    <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> My Groups</button>
+                    <button onclick="myFunction('Demo1')" class="w3-button w3-block site-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> My Crew</button>
                     <div id="Demo1" class="w3-hide w3-container">
                         <p>Some text..</p>
                     </div>
-                    <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> My Events</button>
+                    <button onclick="myFunction('Demo2')" class="w3-button w3-block site-theme-l1 w3-left-align"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> My Events</button>
                     <div id="Demo2" class="w3-hide w3-container">
                         <p>Some other text..</p>
                     </div>
-                    <button onclick="myFunction('Demo3')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-users fa-fw w3-margin-right"></i> My Photos</button>
+                    <button onclick="myFunction('Demo3')" class="w3-button w3-block site-theme-l1 w3-left-align"><i class="fa fa-users fa-fw w3-margin-right"></i> My Photos</button>
                     <div id="Demo3" class="w3-hide w3-container">
                         <div class="w3-row-padding">
                             <br>
@@ -190,7 +187,7 @@
                 <div class="w3-col m12">
                     <div class="w3-card w3-round w3-white">
                         <div class="w3-container w3-padding">
-                            <h6 class="w3-opacity">Social Media template by w3.css</h6>
+                            <h6 class="w3-opacity">Search for similar sentiments</h6>
                             <p id="SubjectTextBox"  contenteditable="true" class="w3-border w3-padding">I love Spring</p>
                             <button id="SearchButton" type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i> &nbsp;Search</button>
                         </div>
@@ -201,35 +198,6 @@
         </div>
 
             <!-- End Middle Column -->
-        </div>
-
-        <!-- Right Column -->
-        <div class="w3-col m2">
-            <div class="w3-card w3-round w3-white w3-center">
-                <div class="w3-container">
-                    <p>Upcoming Events:</p>
-                    <img src="/w3images/forest.jpg" alt="Forest" style="width:100%;">
-                    <p><strong>Holiday</strong></p>
-                    <p>Friday 15:00</p>
-                    <p><button class="w3-button w3-block w3-theme-l4">Info</button></p>
-                </div>
-            </div>
-            <br>
-
-            <div class="w3-card w3-round w3-white w3-center">
-            </div>
-            <br>
-
-            <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-                <p>ADS</p>
-            </div>
-            <br>
-
-            <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
-                <p><i class="fa fa-bug w3-xxlarge"></i></p>
-            </div>
-
-            <!-- End Right Column -->
         </div>
 
         <!-- End Grid -->
