adding main html search formatting

--- a/applications/web-ai-app/src/main/resources/static/main.html
+++ b/applications/web-ai-app/src/main/resources/static/main.html
@@ -43,8 +43,8 @@
                                                         "<span class='w3-right w3-opacity'>"+letterResult.distance+" distance</span>"+
                                                         "<h4>"+letterResult.letter.author+"</h4><br>"+
                                                         "<hr class='w3-clear'/>"+
-                                                        "<p>"+letterResult.letter.subject+"</p>"+
-                                                        "<p>"+sentimentHtml+"</p>"+
+                                                        "<div>"+letterResult.letter.subject+"</div>"+
+                                                        "<div class='w3-half'>"+sentimentHtml+"</div>"+
                                                     "</div>";
 
 
