UI improvements for swagger

--- a/applications/web-ai-app/src/main/resources/static/index.html
+++ b/applications/web-ai-app/src/main/resources/static/index.html
@@ -1,5 +1,3 @@
-<h1>Swagger UI</h1>
-
-<ul>
-    <li><a href="/swagger-ui.html">Swagger UI</a></li>
-</ul>
+<script>
+    window.location.href = "main.html";
+</script>
