--- a/applications/web-ai-app/src/main/resources/static/main.html
+++ b/applications/web-ai-app/src/main/resources/static/main.html
@@ -191,7 +191,7 @@
                     <div class="w3-card w3-round w3-white">
                         <div class="w3-container w3-padding">
                             <h6 class="w3-opacity">Search for similar sentiments</h6>
-                            <p id="SubjectTextBox"  contenteditable="true" class="w3-border w3-padding">I love Spring</p>
+                            <p id="SubjectTextBox"  contenteditable="true" class="w3-border w3-padding">meatloaf</p>
                             <button id="SearchButton" type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i> &nbsp;Search</button>
                         </div>
                     </div>
