adding Postgres ML examples

--- a/applications/web-ai-app/src/main/resources/static/main.html
+++ b/applications/web-ai-app/src/main/resources/static/main.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>real-time-AI-ML-event-streaming</title>
+    <title>Real Time AI-ML Event Streaming</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -150,26 +150,7 @@
             </div>
             <br>
 
-            <!-- Interests -->
-            <div class="w3-card w3-round w3-white w3-hide-small">
-                <div class="w3-container">
-                    <p>Interests</p>
-                    <p>
-                        <span class="w3-tag w3-small w3-theme-d5">News</span>
-                        <span class="w3-tag w3-small w3-theme-d4">W3Schools</span>
-                        <span class="w3-tag w3-small w3-theme-d3">Labels</span>
-                        <span class="w3-tag w3-small w3-theme-d2">Games</span>
-                        <span class="w3-tag w3-small w3-theme-d1">Friends</span>
-                        <span class="w3-tag w3-small w3-theme">Games</span>
-                        <span class="w3-tag w3-small w3-theme-l1">Friends</span>
-                        <span class="w3-tag w3-small w3-theme-l2">Food</span>
-                        <span class="w3-tag w3-small w3-theme-l3">Design</span>
-                        <span class="w3-tag w3-small w3-theme-l4">Art</span>
-                        <span class="w3-tag w3-small w3-theme-l5">Photos</span>
-                    </p>
-                </div>
-            </div>
-            <br>
+
 
             <!-- Alert Box -->
             <div class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
@@ -212,11 +193,11 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-theme-d3 w3-padding-16">
-    <h5>Footer</h5>
+    <h5>Realtime AI ML with <a href="http://spring.io">Spring</a> and <a href="https://www.vmware.com/products/app-platform/tanzu-data">Tanzu Data</a> </h5>
 </footer>
 
 <footer class="w3-container w3-theme-d5">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a> See <a href="https://github.com/ggreen/real-time-AI-ML-event-streaming.git">GitHub Repo</a></p>
 </footer>
 
 <script>
